--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>Electron</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <!-- <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'" /> -->
 
-    <!-- <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content: https://ssl.gstatic.com; 
-    media-src * blob: 'self' http://* 'unsafe-inline' 'unsafe-eval'; 
-    style-src * 'self' 'unsafe-inline'; 
-    img-src * 'self' data: content:; 
-    connect-src * blob:;"
-    /> -->
+    <style>
+      /* global.css */
+      .fullscreen-element {
+        width: 95vw;
+        height: 95vh;
+        overflow: auto;
+        /* 其他样式属性 */
+      }
+    </style>
   </head>
 
   <body>
-    <div id="app"></div>
+    <div class="fullscreen-element" id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
