--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -9,8 +9,8 @@
       .fullscreen-element {
         width: 95vw;
         height: 95vh;
-        overflow: auto;
-        /* 其他样式属性 */
+        overflow: hidden;
+        margin: 0;
       }
     </style>
   </head>
